Istio/demoapp-redirect/02-virtualservice-proxy.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: proxy
spec:
  hosts:
  - proxy
  - "fe.done.com"
  gateways:
  - istio-system/proxy-gateway
  - mesh
  http:
  - name
  http:
  - name: redirect
    match:
    - uri:
        prefix: "/backend"
    redirect:
      uri: /
      authority: backend
      port: 8082
  - name: default
    route:
    - destination:
        host: proxy
---

---
#curl http://proxy/backend  重定向到 -->  curl http://backend:8082/
#    redirect:  # 注意这里的拼接 http://<authority>:<port><uri>
#      uri: /
#      authority: backend
#      port: 8082


#网格内部验证可以看到拿到了重定向结果
#root@client /# while true;do curl -I   proxy/backend;sleep 0.$RANDOM;done
#HTTP/1.1 301 Moved Permanently
#location: http://backend:8082/
#date: Sun, 29 May 2022 10:00:05 GMT
#server: envoy
#transfer-encoding: chunked

#  curl  http://backend:8082/  # 原本就是可以访问的
